--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # datasource
     spring.datasource.url=jdbc:mysql://172.30.0.2:3306/gcp_circle_db?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=gcp
+spring.datasource.password=gcp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
