--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: gcp_circle_db
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_USER: gcp
+      MYSQL_PASSWORD: gcp
       TZ: 'Asia/Tokyo'
     command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
     volumes:
